<resources>
    <string name="app_name">Restaurants</string>
    <string name="description">Description:</string>
    <string name="name">Name:</string>
    <string name="location">Location:</string>
    <string name="new_restaurant">New restaurant</string>
    <string name="about_app">About</string>
    <string name="address">Address:</string>
    <string name="save_restaurant">Save restaurant</string>
    <string name="update_restaurant">Update restaurant</string>
    <string name="cancel">Cancel</string>
    <string name="hint_name">Restaurant\'s name</string>
    <string name="hint_street">Street(works without polish symbols)</string>
    <string name="hint_city">City(works without polish symbols)</string>
    <string name="hint_description">Description</string>
    <string name="restaurant_street_required">Street is required</string>
    <string name="restaurant_city_required">City is required</string>
    <string name="location_not_found">Location has not been found.</string>
    <string name="enable_location">Turn on location</string>
    <string name="settings">Settings</string>
    <string name="location_is_off">Location is off.</string>
    <string name="please_enable_location">Please enable location.</string>
    <string name="distance">Distance:</string>
    <string name="gps_is_off">GPS is off.</string>
    <string name="no_data">No data</string>
    <string name="unable_to_show_map">Unable to show map.</string>
    <string name="location_permission_disable">Location permissions are disabled.</string>
    <string name="enable_location_permission">Enable location permission.</string>
    <string name="nazwa">name</string>
    <string name="lok">location</string>
    <string name="op">description</string>
    <string name="information">Information</string>
    <string name="info_add">To add a new restaurant tap the three dots menu icon and select the New restaurantoption.</string>
    <string name="info_edit_delete">To edit or delete existing restaurant tap and hold selected item on the list.</string>
    <string name="welcome">WELCOME</string>
    <string name="enter">ENTER</string>
</resources>
